--- a/public/stylesheets/backstage.css
+++ b/public/stylesheets/backstage.css
@@ -28,7 +28,7 @@ ul li:first-child{
 }
 iframe{
     width:100%;
-    height: 1000px;
+    height: 10000px;
     border:none;
     background:none;
 }
@@ -37,4 +37,7 @@ hr{
 }
 button{
     border-radius: 4px;
+}
+.img img{
+    height: 252px;
 }
