--- a/views/table1.ejs
+++ b/views/table1.ejs
@@ -16,7 +16,7 @@
     </div>
     <div>
         <hr color="#f90">
-        <button>添加</button>
+        <button id="add">添加</button>
         <hr color="#f90">
     </div>
     <div>
