--- a/views/add.ejs
+++ b/views/add.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
 </head>
 <body>
-    <form action="/table1/add" method="POST">
+    <form action="/tables/add" method="POST">
         <div class="form-group">
           <label>商品名称</label>
           <p><input type="text" name="product_name" ></p>
@@ -42,7 +42,7 @@
             <p><input type="number" name="inventory"></p>
         </div>
         <div class="form-group">
-          <p><input type="file" id="exampleInputFile"></p>
+          <p><input type="file" id="pic" name="pic" accept="image/*"></p>
         </div>
         <button type="submit" class="btn btn-default">提交</button>
       </form>
