--- a/views/tables.ejs
+++ b/views/tables.ejs
@@ -113,7 +113,7 @@
                                     <tbody>
                                         <% for(var i=0 ;i < list.length; i++){ %>
                                             <tr datakey=<%=list[i].id %> >
-                                                <td class="img"><img src=<%=list[i].product_img %> ></td>
+                                                <td class="img"><img src='<%=list[i].product_img %>' ></td>
                                                 <td>
                                                     <%=list[i].product_name %>
                                                 </td>
