--- a/views/index.ejs
+++ b/views/index.ejs
@@ -219,11 +219,10 @@
         </div>
         <div class="row align-items-center">
           <div class="col-md-12 col-lg-7 mb-5">
-            <a href="#"><img src="images/20210511201222.jpg" alt="Image placeholder" class="img-fluid rounded"></a>
+            <a href="/shop"><img src="images/20210511201222.jpg" alt="Image placeholder" class="img-fluid rounded"></a>
           </div>
           <div class="col-md-12 col-lg-5 text-center pl-md-5">
             <h2><a href="#">做个浪漫的人，从给自己买花开始</a></h2>
-            <!-- <p class="post-meta mb-4">By <a href="#">Carl Smith</a> <span class="block-8-sep">&bullet;</span> September 3, 2018</p> -->
             <p>喜欢鲜花、喜欢浪漫的话、喜欢深情的拥抱、喜欢一切细碎的仪式感。</p>
             <p><a href="/shop" class="btn btn-primary btn-sm">立即选购</a></p>
           </div>
