--- a/views/tables.ejs
+++ b/views/tables.ejs
@@ -44,8 +44,8 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false"> <i class="menu-icon fa fa-glass"></i>Pages</a>
                         <ul class="sub-menu children dropdown-menu">
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="page-login.html">Login</a></li>
-                            <li><i class="menu-icon fa fa-sign-in"></i><a href="page-register.html">Register</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adlogin">Login</a></li>
+                            <li><i class="menu-icon fa fa-sign-in"></i><a href="/adregister">Register</a></li>
                         </ul>
                     </li>
                 </ul>
