--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -238,7 +238,7 @@
                       <img src="images/home_floor_song.jpg" alt="" class="img-fluid" style="width: 100%;">
                     </figure>
                     <div class="text">
-                      <span class="text-uppercase">爱情鲜花专区</span>
+                      <span class="text-uppercase">永生花</span>
                       <h3>永生花专区</h3>
                     </div>
                   </a>
