--- a/views/shopsingle.ejs
+++ b/views/shopsingle.ejs
@@ -160,10 +160,12 @@
               <div class="item">
                 <div class="block-4 text-center">
                   <figure class="block-4-image">
+                    <a href="<%=list[i].id %>">
                     <img src="<%=list[i].product_img %>" alt="Image placeholder" class="img-fluid">
+                    </a>
                   </figure>
                   <div class="block-4-text p-4">
-                    <h3><a href="#"><%=list[i].product_name %></a></h3>
+                    <h3><a href="<%=list[i].id %>"><%=list[i].product_name %></a></h3>
                     <p class="mb-0"><%=list[i].intro %></p>
                     <p class="text-primary font-weight-bold">$<%=list[i].price %></p>
                   </div>
