--- a/views/index.ejs
+++ b/views/index.ejs
@@ -190,12 +190,12 @@
                 <div class="item">
                   <div class="block-4 text-center">
                     <figure class="block-4-image">
-                      <a href="shop/shopsingle/<%=list[i].id %>">
+                      <a href="/shop/<%=list[i].id %>" >
                       <img src="<%=list[i].product_img %>" alt="Image placeholder" class="img-fluid">
                       </a>
                     </figure>
                     <div class="block-4-text p-4">
-                      <h3><a href="shop/shopsingle/<%=list[i].id %>">
+                      <h3><a href="/shop/<%=list[i].id %>">
                           <%=list[i].product_name %>
                         </a></h3>
                       <p class="mb-0">
