--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -142,11 +142,11 @@
                 <div class="col-sm-6 col-lg-4 mb-4" data-aos="fade-up">
                   <div class="block-4 text-center border">
                     <figure class="block-4-image">
-                      <a href="/shop/shopsingle/<%=list[i].id %>" ><img src="<%=list[i].product_img %>" alt="Image placeholder"
+                      <a href="/shop/<%=list[i].id %>" ><img src="<%=list[i].product_img %>" alt="Image placeholder"
                           class="img-fluid"></a>
                     </figure>
                     <div class="block-4-text p-4">
-                      <h3><a href="/shop/shopsingle/<%=list[i].id %>" >
+                      <h3><a href="/shop/<%=list[i].id %>" >
                           <%=list[i].product_name %>
                         </a></h3>
                       <p class="mb-0">
