--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -119,14 +119,15 @@
                   </tr>
                 </thead>
                 <tbody>
+                  <% for(var i=0 ;i < list.length; i++){ %>
                   <tr>
                     <td class="product-thumbnail">
-                      <img src="images/cloth_1.jpg" alt="Image" class="img-fluid">
+                      <img src="<%=list[i].product_img %>" alt="Image" class="img-fluid">
                     </td>
                     <td class="product-name">
-                      <h2 class="h5 text-black">Top Up T-Shirt</h2>
+                      <h2 class="h5 text-black"><%=list[i].product_name %></h2>
                     </td>
-                    <td>$49.00</td>
+                    <td>$<%=list[i].price %></td>
                     <td>
                       <div class="input-group mb-3" style="max-width: 120px;">
                         <div class="input-group-prepend">
@@ -139,11 +140,12 @@
                       </div>
 
                     </td>
-                    <td>$49.00</td>
+                    <td>$<%=list[i].price %></td>
                     <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
                   </tr>
+                  <%} %>
 
-                  <tr>
+                  <!-- <tr>
                     <td class="product-thumbnail">
                       <img src="images/cloth_2.jpg" alt="Image" class="img-fluid">
                     </td>
@@ -165,7 +167,7 @@
                     </td>
                     <td>$49.00</td>
                     <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
-                  </tr>
+                  </tr> -->
                 </tbody>
               </table>
             </div>
