--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -152,7 +152,7 @@
                       <p class="mb-0">
                         <%=list[i].intro %>
                       </p>
-                      <p class="text-primary font-weight-bold">$<%=list[i].price %>
+                      <p class="text-primary font-weight-bold">￥<%=list[i].price %>
                       </p>
                     </div>
                   </div>
